--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "name": "Danny Su",
     "email": "contact@dannysu.com"
   },
-  "scripts": {}
+  "scripts": {
+    "nodered": "node-red -u user"
+  },
+  "devDependencies": {
+    "node-red": "^1.3.5"
+  }
 }
